test/badas1.l1.out
error: incompletely defined address space
                mkas	(builtin function)
               entry	(badas1.l1:1)
