test/badas1.l1
badas = mkas([:]);
x = (int *){badas}0;
*x;
